# SDL3-minesweeper

./: .clangd  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  compile_commands.json  minesweeper
.cache/clangd/index/: Matrix.hpp.C85E5BB4AB9B71DB.idx  Renderer.cpp.76226E0CD8FC54C8.idx  Renderer.hpp.E5428533E07F42C1.idx  SDL.h.2D03EE03D4497EA4.idx  SDL.h.47FB91FC0771424F.idx  SDL_assert.h.54974B2FCB0105CB.idx  SDL_assert.h.7A0217C967AD38F4.idx  SDL_asyncio.h.5447E0143D4C79FE.idx  SDL_asyncio.h.99A8DF98EBEB639F.idx  SDL_atomic.h.35E7BE6B1B8D9B9C.idx  SDL_atomic.h.D948DEA365BD697A.idx  SDL_audio.h.7CC3092153CFAB94.idx  SDL_audio.h.CF0C5C7EF7C677E1.idx  SDL_begin_code.h.0706FC5921742B77.idx  SDL_begin_code.h.1AAF42D0A66D8EB2.idx  SDL_bits.h.38FA9E1E7F943382.idx  SDL_bits.h.628724ACFD619261.idx  SDL_blendmode.h.10076876D06D247C.idx  SDL_blendmode.h.773D2FC8FD0F7163.idx  SDL_camera.h.60ED84A783394F13.idx  SDL_camera.h.A74249835A157AD1.idx  SDL_clipboard.h.914E84005C1A7329.idx  SDL_clipboard.h.E78152D1F6F38418.idx  SDL_close_code.h.9B0B284A7EE1F818.idx  SDL_close_code.h.CDBAF69D026C79A6.idx  SDL_cpuinfo.h.8F6C51787001923C.idx  SDL_cpuinfo.h.A39A85FF0339C33C.idx  SDL_dialog.h.2C94CECC07AC570F.idx  SDL_dialog.h.8C6E620481682E19.idx  SDL_endian.h.85C4CB378D426CDB.idx  SDL_endian.h.B4443D1F436AEF2B.idx  SDL_error.h.2D520E14D63B5522.idx  SDL_error.h.6E3A5B928E75D305.idx  SDL_events.h.DD29F4DF6EC45F51.idx  SDL_events.h.ED9E350AC41F51F5.idx  SDL_filesystem.h.47796652F6613FC5.idx  SDL_filesystem.h.C5E9755556DA17AB.idx  SDL_gamepad.h.34291E9F2519EB7C.idx  SDL_gamepad.h.FF64D9C928BD4B8C.idx  SDL_gpu.h.AA641F118A774B2A.idx  (+93 more)
cmake/: copydll.cmake
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake-build/.cache/clangd/index/: cmake_pch.hxx.33050C7FDBFA3D3D.idx
cmake-build/.cmake/api/v1/reply/: cache-v2-056b4d69eab0cadb865d.json  cache-v2-1d7f157384f167d02136.json  cache-v2-dae6aa87be020fd44569.json  cache-v2-eaa20f47c725ff5666ce.json  cmakeFiles-v1-233870d858d53d466c85.json  cmakeFiles-v1-ede5488081baf4385c1c.json  codemodel-v2-7dde7f726bc8d04c22e3.json  codemodel-v2-ae05da4f1c8f731a07f2.json  codemodel-v2-ce39e07ce952c3351bfc.json  codemodel-v2-e789d78d2738b911e4f4.json  codemodel-v2-e969a682d39282b03dfe.json  index-2025-04-07T12-48-31-0176.json  index-2025-04-07T13-08-33-0559.json  index-2025-04-08T03-21-18-0097.json  (+8 more)
include/: Matrix.hpp  Renderer.hpp  Window.hpp  context.hpp  pch.hpp
src/: Renderer.cpp  Window.cpp  callback.cpp  context.cpp
